--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">programador front-end,arista plastico, activo muy dinamico, creativo,lo que usted nesesita para la nueva era de la innovacion</p>
+          <p class="text-white-75 font-weight-light mb-5">Programador front-end,artista plastico, activo muy dinamico, creativo,lo que usted nesesita para la nueva era de la innovacion</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">aserca de mi</a>
         </div>
       </div>
